--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1,31 +1,18 @@
 /* Space out content a bit */
 body {
-  margin-top: 20px;
+  margin-top: 40px;
   margin-bottom: 20px;
-}
-
-.seek-element {
-  padding-top: 10px;
-  padding-bottom: 10px;
-  cursor: pointer;
-}
-
-.seek-element:hover{
-   background-color:#F2F2F2;
+ 
 }
 
 .seek-list{
   width:300px;
-  height:500px;
+  height:400px;
   overflow:scroll;
 }
 
 /* Customize container */
-@media (min-width: 768px) {
-  .container {
-    max-width: 730px;
-  }
-}
-.container-narrow > hr {
-  margin: 30px 0;
+.sample {
+  width: 350px;
+  margin: 0 auto;
 }
